--- a/package.json
+++ b/package.json
@@ -9,11 +9,23 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-bootstrap": "^0.32.24",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/styled-components": "^5.1.4",
+    "bootstrap": "^4.5.2",
+    "firebase": "^7.23.0",
     "react": "^17.0.0",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.0",
+    "react-firebase-hooks": "^2.2.0",
+    "react-firebaseui": "^4.1.0",
+    "react-hook-form": "^6.9.2",
+    "react-icons": "^3.11.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
-    "typescript": "~3.7.2"
+    "styled-components": "^5.2.1",
+    "typescript": "4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
