--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/styled-components": "^5.1.4",
     "bootstrap": "^4.5.2",
     "firebase": "^7.23.0",
+    "moment": "^2.29.1",
     "react": "^17.0.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.0",
